--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+  <%= render partial: "shared/navbar" %>
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
