--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,6 @@
 <div class="d-flex align-items-center justify-content-center">
   <h1>Welcome to Tweet Scheduler</h1>
+  <% if @user %>
+    Logged in as: <%= @user.email %>
+  <% end %>
 <div>
