--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,9 +1,9 @@
 <h1>Edit Password</h1>
 
-<%= form_with model: @user, url: edit_password_path do |form| %>
-  <% if @user.errors.any?%>
+<%= form_with model: Current.user, url: edit_password_path do |form| %>
+  <% if form.object.errors.any?%>
     <div class="alert alert-danger">
-      <% @user.errors.full_messages.each do |message|%>
+      <% form.object.errors.full_messages.each do |message|%>
         <div><%= message %></div>
       <% end %>
     </div>
@@ -13,6 +13,7 @@
     <%= form.label :password %>
     <%= form.password_field :password, class: "form-control", placeholder: "Password" %>
   </div>
+
   <div class="mb-3">
     <%= form.label :password_confirmation %>
     <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Password" %>
