--- a/app/views/password_mailer/reset.html.erb
+++ b/app/views/password_mailer/reset.html.erb
@@ -4,4 +4,4 @@ Someone requested a reset of your password.
 
 If this was you, click the link to reset your password. The link will expire automatically in 15 minutes.
 
-<%= link_to "Reset password", password_reset_edit_url %>
+<%= link_to "Reset password", password_reset_edit_url(token: @token) %>
