--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,5 @@
 <div class="d-flex align-items-center justify-content-center">
   <h1>Welcome to Tweet Scheduler</h1>
 <div>
+
+<%= button_to "Connect Twitter", "/auth/twitter", method: :post, data: {turbo: "false"}, class: "btn btn-primary" %>
